--- a/todos/package.json
+++ b/todos/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --mode=development --watch"
+    "postinstall": "webpack",
+    "webpack": "webpack --watch"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "webpack": "^4.6.0"
   },
   "devDependencies": {
